# playground

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  playground.cpp
src/common/: Camera.hpp  Color.hpp  Ray.hpp  Vec3.hpp
src/renderer/: Object.hpp  Sphere.hpp
tests/: CMakeLists.txt  test_vec3.cpp
